add a new jsscript type and set Script::script to it.

--- a/scripts/b2rexpkg/rex_com.yml
+++ b/scripts/b2rexpkg/rex_com.yml
@@ -20,7 +20,7 @@ Components:
        internal_name: Run on load
     }
     - script: {
-       type: string,
+       type: jsscript,
        internal_name: Script ref
     }
   EC_HoveringText:
